# asciilint

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci-tests.yml
docs/: changelog.md  index.md
docs/articles/: configuration.md  get-started.md
docs/reference/: config.md  index.md  policy.md  scanner.md
src/asciilint/: __init__.py  __main__.py  cli.py  config.py  output.py  policy.py  scanner.py
tests/: test_cli.py  test_policy.py  test_scanner.py
