[project]
name = "asciilint"
version = "0.2.1"
description = "ASCII and character policy checks for text files"
authors = [{ name = "Nan Xiao", email = "me@nanx.me" }]
readme = "README.md"
dependencies = ["click>=8.3.0", "pathspec>=1.0.0"]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing",
    "Topic :: Utilities",

    "Operating System :: OS Independent",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.11"

[project.scripts]
asciilint = "asciilint.cli:main"

[project.urls]
Homepage = "https://nanx.me/asciilint/"
Documentation = "https://nanx.me/asciilint/"
Repository = "https://github.com/nanxstats/asciilint"
Issues = "https://github.com/nanxstats/asciilint/issues"
Changelog = "https://github.com/nanxstats/asciilint/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/docs", "/scripts", "/AGENTS.md", "/uv.lock", "/zensical.toml"]

[tool.hatch.build.targets.wheel]
exclude = ["/docs", "/scripts", "/AGENTS.md", "/uv.lock", "/zensical.toml"]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "mkdocstrings-python>=2.0.5",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "zensical>=0.0.46",
]

[tool.ruff]
exclude = ["vendor", ".venv"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.isort]
profile = "black"
skip = ["vendor", ".venv"]

[tool.mypy]
exclude = ["vendor/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
